namespaces/live-1.cloud-platform.service.justice.gov.uk/formbuilder-platform-integration-staging/04-networkpolicy.yaml
---
# Source: formbuilder-platform/templates/04-networkpolicy.yaml
# auto-generated from fb-cloud-platforms-environments
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: formbuilder-platform-integration-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: formbuilder-platform-integration-staging
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers
